# autopattern

./: .gitignore  ARCHITECTURE_VISUAL.md  CODE_SNIPPETS_BEFORE_AFTER.md  LICENSE  README.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  UPDATED_FILES_REFERENCE.md  package-lock.json  package.json  test_workflow.csv
.github/: ISSUE_TEMPLATE.md
automation/: README.md
automation/generators/: playwrightGenerator.js
automation/runners/: server.js
automation/temp_scripts/: workflow_1767377162669.js  workflow_1767377367272.js  workflow_1767377615927.js  workflow_1767378352030.js  workflow_1767378694401.js  workflow_1767379006350.js  workflow_1767379252380.js  workflow_1767379480127.js
backend/: README.md  __init__.py  pyproject.toml
backend/automation/: .env.example  __init__.py  automation_runner.py  config.py  llm_client.py  main.py  requirements.txt  sample_workflow.csv  server.py  workflow_loader.py
docs/: CONTRIBUTING.md  LIMITATIONS_AND_IMPROVEMENTS.md  METHODOLOGY.md  TECH_STACK.md
docs/architecture/: RepoStructure.md
docs/roadmap/: Roadmap.md
extension/: README.md  manifest.json
extension/src/background/: background.js
extension/src/content/: content.js
extension/src/ui/: dashboard.html  dashboard.js  popup.html  popup.js  settings.js
extension/src/utils/: csvExporter.js  noiseReduction.js
models/: README.md
models/training/: sessionizer.js  taskmining_export_full.csv  taskmining_sessionized.csv  taskmining_sessionized2.csv
pattern-mining/: README.md
