[project]
name = "autopattern-backend"
version = "0.1.0"
description = "Backend services for AutoPattern - workflow to automation pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.1.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
autopattern = "automation.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["automation"]
